# dummy-webhook

./: .dockerignore  .envrc.sample  Cargo.toml  Tiltfile  shell.nix
.github/ISSUE_TEMPLATE/: pre-release.md
deploy/: webhook.yaml
docker/: Dockerfile  Dockerfile.ubuntu
src/: main.rs
