[package]
name = "dummy-webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "feat/webhooks" }
stackable-webhook = { git = "https://github.com/stackabletech//operator-rs.git", branch = "feat/webhooks" }
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "net"] }
kube = { version = "0.87.1", default-features = false }
k8s-openapi = { version = "0.20.0", default-features = false, features = [
  "v1_28",
] }
serde_json = "1.0.68"
