[package]
name = "dummy-webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
k8s-openapi = { version = "0.22.0", default-features = false, features = ["v1_30"] }
kube = { version = "0.91.0", default-features = false, features = ["client", "jsonpatch", "runtime", "derive", "rustls-tls"] }
log = "0.4.21"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
stackable-telemetry = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
stackable-webhook = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1.40"
tracing-log = "0.2.0"

# [patch.crates-io]
# aws-lc-sys.git = "https://github.com/aws/aws-lc-rs"

# [patch."https://github.com/stackabletech//operator-rs.git"]
# stackable-operator.path = "../../stackabletech/operator-rs/crates/stackable-operator"
# stackable-webhook.path = "../../stackabletech/operator-rs/crates/stackable-webhook"
# stackable-telemetry.path = "../../stackabletech/operator-rs/crates/stackable-telemetry"
